# trust-lang

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  cargo.toml
crates/trusty-cli/: Cargo.toml
crates/trusty-cli/src/: main.rs
crates/trusty-compiler/: Cargo.toml
crates/trusty-compiler/src/: codegen.rs  lib.rs  parser.rs
crates/trusty-compiler/src/stdlib/: http.rs  json.rs  math.rs  mod.rs  rand.rs  time.rs
crates/trusty-compiler/src/transpiler/: enums.rs  expressions.rs  functions.rs  imports.rs  mod.rs  scope.rs  statements.rs  structs.rs  types.rs
crates/trusty-lsp/: Cargo.toml  README.md
crates/trusty-lsp/src/: main.rs
docs/stdlib/: README.md  amqp.md  async.md  auth.md  base64.md  bcrypt.md  bd.md  cli.md  collections.md  compress.md  config.md  crypto.md  docker.md  embed.md  env.md  fs.md  gpu.md  graphql.md  grpc.md  http.md  io.md  json.md  jwt.md  kafka.md  linalg.md  log.md  mail.md  math.md  metrics.md  model.md  nats.md  net.md  nn.md  path.md  process.md  rand.md  redis.md  regex.md  serialize.md  stats.md  (+10 more)
examples/: hello.trs  main.trs  string-edge-cases.trs  string-edge-cases.ts
examples/http-app/: trusty.json
examples/http-app/src/: main.trs
examples/mon-projet/: trusty.json
examples/mon-projet/src/: fibo.js  fibo.trs  http_fetch.trs  http_server.trs  json_demo.trs  main.js  main.trs  math.trs  point.trs  timer.trs
tools/vscode-trust-syntax/: README.md  extension.js  language-configuration.json  package-lock.json  package.json  trust-lang-syntax-0.0.1.vsix
tools/vscode-trust-syntax/snippets/: trust.code-snippets
tools/vscode-trust-syntax/syntaxes/: trust.tmLanguage.json
