[package]
name = "trusty-cli"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "trusty"
path = "src/main.rs"

[dependencies]
# Notre compiler
trusty-compiler = { path = "../trusty-compiler" }

# CLI
clap.workspace = true
anyhow.workspace = true

# File system
walkdir = "2.5"
