[package]
name = "trusty-lsp"
version = "0.1.0"
edition = "2021"
authors = ["Grams"]
license = "MIT OR Apache-2.0"

[[bin]]
name = "trusty-lsp"
path = "src/main.rs"

[dependencies]
trusty-compiler = { path = "../trusty-compiler" }
anyhow = "1.0.101"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros", "io-std", "sync"] }
tower-lsp = "0.20.0"
url = "2.5.7"
